FIX: fixes spacing and position issues on vert tabs steps content

--- a/assets/sass/3_modules/_tabs.scss
+++ b/assets/sass/3_modules/_tabs.scss
@@ -487,7 +487,7 @@
     border-top: $base-border;
     border-width: 2px;
     background-color: $white;
-    padding: 0 $sm-spacing;
+    padding: 0 $sm-spacing 20px;
 
     @include media($small) {
         border: $base-border;
